Fixed ID anchor

--- a/src/components/bio/bio.scss
+++ b/src/components/bio/bio.scss
@@ -13,6 +13,12 @@
     max-width: 400px;
     height: auto;
   }
+  #bio {
+    display: block;
+    position: absolute;
+    top: 70%;
+    visibility: hidden;
+  }
   #valenPic:not([src]) {
     content: $valen-pic;
   }
